--- a/vagrant/centos-6.5-test/Vagrantfile
+++ b/vagrant/centos-6.5-test/Vagrantfile
@@ -4,5 +4,34 @@ Vagrant.configure(2) do |config|
 
   config.vm.network "forwarded_port", guest: 80, host: 8080
 
+  config.vm.provision "shell", path: "salt/salt-prepare.sh"
+
+  # Workaround https://github.com/mitchellh/vagrant/issues/5973
+  #config.ssh.username = "root"
+  #config.ssh.password = "vagrant"
+
+  config.vm.provision :shell, path: "salt/salt-install.sh", privileged: false
+
+  #config.vm.provision :salt do |salt|
+
+  #  salt.install_master = true
+  #  salt.no_minion = false
+  #  salt.install_type = "stable"
+
+  #  # https://github.com/mitchellh/vagrant/issues/5973
+  #  salt.master_config = "salt/master.conf"
+  #  salt.seed_master = { "127.0.0.1" => "salt/key/127.0.0.1.pub" }
+
+  #  # https://github.com/mitchellh/vagrant/issues/5973
+  #  salt.minion_config = "salt/minion.conf"
+  #  salt.minion_pub = "salt/key/127.0.0.1.pub"
+  #  salt.minion_key = "salt/key/127.0.0.1.pem"
+  #  salt.run_highstate = true
+
+  #  # Workaround https://github.com/mitchellh/vagrant/issues/5973
+  #  #salt.bootstrap_script = "salt/salt-provision.sh"
+  #end
+
+
 end
 
