add nagios nrpe to basic config

--- a/vagrant/centos-6.5-test/salt/master.conf
+++ b/vagrant/centos-6.5-test/salt/master.conf
@@ -2,3 +2,8 @@ file_roots:
   base:
     - /srv/devops-sample/saltstack/salt
     - /srv/formulas/apache-formula
+    - /srv/formulas/nagios-formula
+pillar_roots:
+  base:
+    - /srv/devops-sample/saltstack/pillar
+
