--- a/vagrant/centos-6.5-test/Vagrantfile
+++ b/vagrant/centos-6.5-test/Vagrantfile
@@ -6,6 +6,9 @@ Vagrant.configure(2) do |config|
 
   config.vm.provision "shell", path: "salt/salt-prepare.sh"
 
+  # for nagios
+  config.vm.provision "shell", path; "rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm"
+
   # Workaround https://github.com/mitchellh/vagrant/issues/5973
   #config.ssh.username = "root"
   #config.ssh.password = "vagrant"
