--- a/vagrant/centos-6.5-test/Vagrantfile
+++ b/vagrant/centos-6.5-test/Vagrantfile
@@ -7,7 +7,8 @@ Vagrant.configure(2) do |config|
   config.vm.provision "shell", path: "salt/salt-prepare.sh"
 
   # for nagios
-  config.vm.provision "shell", path; "rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm"
+  config.vm.provision "shell", inline: "wget https://anorien.csc.warwick.ac.uk/mirrors/epel/6/i386/epel-release-6-8.noarch.rpm && rpm -Uvh epel-release-6-8.noarch.rpm"
+   config.vm.provision "shell", inline: "wget http://rpms.famillecollet.com/enterprise/remi-release-6.rpm && rpm -Uvh remi-release-6.rpm"
 
   # Workaround https://github.com/mitchellh/vagrant/issues/5973
   #config.ssh.username = "root"
