added mysql server and test db

--- a/vagrant/centos-6.5-test/salt/master.conf
+++ b/vagrant/centos-6.5-test/salt/master.conf
@@ -3,6 +3,7 @@ file_roots:
     - /srv/devops-sample/saltstack/salt
     - /srv/formulas/apache-formula
     - /srv/formulas/nagios-formula
+    - /srv/formulas/mysql-formula
 pillar_roots:
   base:
     - /srv/devops-sample/saltstack/pillar
