--- a/saltstack/etc/minion-local-dockertest.conf
+++ b/saltstack/etc/minion-local-dockertest.conf
@@ -7,6 +7,7 @@ file_roots:
     - /srv/formulas/apache-formula
     - /srv/formulas/mysql-formula
     - /srv/formulas/nagios-formula
+    - /srv/formulas/docker-formula
 pillar_roots:
   base:
     - /srv/devops-sample/saltstack/pillar-local
