--- a/vagrant/ubuntu-14/Vagrantfile
+++ b/vagrant/ubuntu-14/Vagrantfile
@@ -25,6 +25,7 @@ Vagrant.configure(2) do |config|
     [ -d apache-formula ] || git clone https://github.com/cgreenhalgh/apache-formula.git
     [ -d nagios-formula ] || git clone https://github.com/cgreenhalgh/nagios-formula.git
     [ -d mysql-formula ] || git clone https://github.com/cgreenhalgh/mysql-formula.git
+    [ -d docker-formula ] || git clone https://github.com/cgreenhalgh/docker-formula.git
 
     # see http://docs.saltstack.com/en/latest/topics/installation/ubuntu.html
     add-apt-repository ppa:saltstack/salt
