--- a/saltstack/etc/minion-local-dockertest.conf
+++ b/saltstack/etc/minion-local-dockertest.conf
@@ -8,6 +8,7 @@ file_roots:
     - /srv/formulas/mysql-formula
     - /srv/formulas/nagios-formula
     - /srv/formulas/docker-formula
+    #- /srv/formulas/php-formula
 pillar_roots:
   base:
     - /srv/devops-sample/saltstack/pillar-local
